--- a/zadanie1/output.yaml
+++ b/zadanie1/output.yaml
@@ -23,7 +23,8 @@ packets:
   len_frame_medium: 64
   len_frame_pcap: 60
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 3
   frame_type: ETHERNET II
@@ -34,8 +35,10 @@ packets:
     FF FF A5 30 00 00 02 04 05 B4 01 01 04 02
   len_frame_medium: 66
   len_frame_pcap: 62
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 4
   frame_type: ETHERNET II
@@ -46,8 +49,10 @@ packets:
     10 2C 5B 24 00 00 02 04 05 64 04 02 00 00
   len_frame_medium: 66
   len_frame_pcap: 62
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 5
   frame_type: ETHERNET II
@@ -58,8 +63,10 @@ packets:
     FF FF 96 C3 00 00
   len_frame_medium: 64
   len_frame_pcap: 54
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 6
   frame_type: ETHERNET II
@@ -75,8 +82,10 @@ packets:
     0A
   len_frame_medium: 133
   len_frame_pcap: 129
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 7
   frame_type: ETHERNET II
@@ -87,8 +96,10 @@ packets:
     FF B4 96 C3 00 00
   len_frame_medium: 64
   len_frame_pcap: 54
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 8
   frame_type: ETHERNET II
@@ -103,8 +114,10 @@ packets:
     0D 0A 32 32 30 2D 0D 0A 32 32 30 20 0D 0A
   len_frame_medium: 130
   len_frame_pcap: 126
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 9
   frame_type: ETHERNET II
@@ -115,8 +128,10 @@ packets:
     FF 6C 96 C3 00 00
   len_frame_medium: 64
   len_frame_pcap: 54
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 10
   frame_type: ETHERNET II
@@ -128,8 +143,10 @@ packets:
     6D 6F 75 73 0D 0A
   len_frame_medium: 74
   len_frame_pcap: 70
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 11
   frame_type: ETHERNET II
@@ -142,8 +159,10 @@ packets:
     73 77 6F 72 64 2E 0D 0A
   len_frame_medium: 92
   len_frame_pcap: 88
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 12
   frame_type: ETHERNET II
@@ -154,8 +173,10 @@ packets:
     FF 4A 96 B3 00 00
   len_frame_medium: 64
   len_frame_pcap: 54
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: FF:FF:FF:FF:FF:FF
+- dst_ip: 192.168.1.255
+  dst_mac: FF:FF:FF:FF:FF:FF
   ether_type: IPv4
   frame_number: 13
   frame_type: ETHERNET II
@@ -168,8 +189,10 @@ packets:
     00 00 00 00 00 01
   len_frame_medium: 90
   len_frame_pcap: 86
+  src_ip: 192.168.1.1
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 14
   frame_type: ETHERNET II
@@ -181,8 +204,10 @@ packets:
     66 61 2E 73 6B 0D 0A
   len_frame_medium: 75
   len_frame_pcap: 71
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 15
   frame_type: ETHERNET II
@@ -194,8 +219,10 @@ packets:
     73 75 63 63 65 73 73 66 75 6C 2E 0D 0A
   len_frame_medium: 81
   len_frame_pcap: 77
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 16
   frame_type: ETHERNET II
@@ -206,8 +233,10 @@ packets:
     FF 33 96 A2 00 00
   len_frame_medium: 64
   len_frame_pcap: 54
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 17
   frame_type: ETHERNET II
@@ -219,8 +248,10 @@ packets:
     36 38 2C 31 2C 33 33 2C 31 39 2C 31 33 39 0D 0A
   len_frame_medium: 84
   len_frame_pcap: 80
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 18
   frame_type: ETHERNET II
@@ -234,8 +265,10 @@ packets:
     67 20 50 41 53 56 2E 0D 0A
   len_frame_medium: 109
   len_frame_pcap: 105
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 19
   frame_type: ETHERNET II
@@ -246,8 +279,10 @@ packets:
     FF 00 E7 CF 00 00 4E 4C 53 54 0D 0A
   len_frame_medium: 64
   len_frame_pcap: 60
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 20
   frame_type: ETHERNET II
@@ -259,8 +294,10 @@ packets:
     C2 3B 00 00 00 00 01 03 03 07
   len_frame_medium: 78
   len_frame_pcap: 74
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 21
   frame_type: ETHERNET II
@@ -272,8 +309,10 @@ packets:
     08 0A 00 00 00 00 00 00 00 00 01 01 04 02
   len_frame_medium: 82
   len_frame_pcap: 78
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 22
   frame_type: ETHERNET II
@@ -285,8 +324,10 @@ packets:
     00 00
   len_frame_medium: 70
   len_frame_pcap: 66
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 23
   frame_type: ETHERNET II
@@ -299,8 +340,10 @@ packets:
     72 79 20 6C 69 73 74 69 6E 67 2E 0D 0A
   len_frame_medium: 97
   len_frame_pcap: 93
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 24
   frame_type: ETHERNET II
@@ -326,8 +369,10 @@ packets:
     66 69 63 0D 0A 74 6F 6F 6C 73 0D 0A
   len_frame_medium: 304
   len_frame_pcap: 300
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 25
   frame_type: ETHERNET II
@@ -339,8 +384,10 @@ packets:
     00 00
   len_frame_medium: 70
   len_frame_pcap: 66
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 26
   frame_type: ETHERNET II
@@ -352,8 +399,10 @@ packets:
     C2 67
   len_frame_medium: 70
   len_frame_pcap: 66
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 27
   frame_type: ETHERNET II
@@ -365,8 +414,10 @@ packets:
     C2 67
   len_frame_medium: 70
   len_frame_pcap: 66
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 28
   frame_type: ETHERNET II
@@ -378,8 +429,10 @@ packets:
     E9 38
   len_frame_medium: 70
   len_frame_pcap: 66
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 29
   frame_type: ETHERNET II
@@ -390,8 +443,10 @@ packets:
     FE D9 96 82 00 00
   len_frame_medium: 64
   len_frame_pcap: 54
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 30
   frame_type: ETHERNET II
@@ -403,8 +458,10 @@ packets:
     6F 72 79 20 73 65 6E 64 20 4F 4B 2E 0D 0A
   len_frame_medium: 82
   len_frame_pcap: 78
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 31
   frame_type: ETHERNET II
@@ -415,8 +472,10 @@ packets:
     FE C1 96 82 00 00
   len_frame_medium: 64
   len_frame_pcap: 54
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 32
   frame_type: ETHERNET II
@@ -428,8 +487,10 @@ packets:
     36 38 2C 31 2C 33 33 2C 31 39 2C 31 34 30 0D 0A
   len_frame_medium: 84
   len_frame_pcap: 80
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 33
   frame_type: ETHERNET II
@@ -443,8 +504,10 @@ packets:
     67 20 50 41 53 56 2E 0D 0A
   len_frame_medium: 109
   len_frame_pcap: 105
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 34
   frame_type: ETHERNET II
@@ -455,8 +518,10 @@ packets:
     FE 8E E9 B2 00 00 4C 49 53 54 0D 0A
   len_frame_medium: 64
   len_frame_pcap: 60
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 35
   frame_type: ETHERNET II
@@ -468,8 +533,10 @@ packets:
     DD 16 00 00 00 00 01 03 03 07
   len_frame_medium: 78
   len_frame_pcap: 74
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 36
   frame_type: ETHERNET II
@@ -481,8 +548,10 @@ packets:
     08 0A 00 00 00 00 00 00 00 00 01 01 04 02
   len_frame_medium: 82
   len_frame_pcap: 78
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 37
   frame_type: ETHERNET II
@@ -494,8 +563,10 @@ packets:
     00 00
   len_frame_medium: 70
   len_frame_pcap: 66
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 38
   frame_type: ETHERNET II
@@ -508,8 +579,10 @@ packets:
     72 79 20 6C 69 73 74 69 6E 67 2E 0D 0A
   len_frame_medium: 97
   len_frame_pcap: 93
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 39
   frame_type: ETHERNET II
@@ -606,8 +679,10 @@ packets:
     20 20 20 34 30 39 36 20 44 65
   len_frame_medium: 1438
   len_frame_pcap: 1434
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 40
   frame_type: ETHERNET II
@@ -635,8 +710,10 @@ packets:
     6F 6F 6C 73 0D 0A
   len_frame_medium: 330
   len_frame_pcap: 326
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 41
   frame_type: ETHERNET II
@@ -648,8 +725,10 @@ packets:
     DD 41
   len_frame_medium: 70
   len_frame_pcap: 66
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 42
   frame_type: ETHERNET II
@@ -661,8 +740,10 @@ packets:
     00 00
   len_frame_medium: 70
   len_frame_pcap: 66
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 43
   frame_type: ETHERNET II
@@ -674,8 +755,10 @@ packets:
     DD 41
   len_frame_medium: 70
   len_frame_pcap: 66
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 44
   frame_type: ETHERNET II
@@ -687,8 +770,10 @@ packets:
     DD 41
   len_frame_medium: 70
   len_frame_pcap: 66
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 45
   frame_type: ETHERNET II
@@ -700,8 +785,10 @@ packets:
     E9 7D
   len_frame_medium: 70
   len_frame_pcap: 66
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 46
   frame_type: ETHERNET II
@@ -712,8 +799,10 @@ packets:
     FE 67 96 62 00 00
   len_frame_medium: 64
   len_frame_pcap: 54
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 47
   frame_type: ETHERNET II
@@ -725,8 +814,10 @@ packets:
     6F 72 79 20 73 65 6E 64 20 4F 4B 2E 0D 0A
   len_frame_medium: 82
   len_frame_pcap: 78
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 48
   frame_type: ETHERNET II
@@ -737,8 +828,10 @@ packets:
     FE 4F 96 62 00 00
   len_frame_medium: 64
   len_frame_pcap: 54
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 49
   frame_type: ETHERNET II
@@ -749,8 +842,10 @@ packets:
     FE 4F EE A0 00 00 51 55 49 54 0D 0A
   len_frame_medium: 64
   len_frame_pcap: 60
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 50
   frame_type: ETHERNET II
@@ -762,8 +857,10 @@ packets:
     65 2E 0D 0A
   len_frame_medium: 72
   len_frame_pcap: 68
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:14:38:06:E0:93
+- dst_ip: 192.168.1.33
+  dst_mac: 00:14:38:06:E0:93
   ether_type: IPv4
   frame_number: 51
   frame_type: ETHERNET II
@@ -774,8 +871,10 @@ packets:
     10 95 84 08 00 00 00 00 00 00 00 00
   len_frame_medium: 64
   len_frame_pcap: 60
+  src_ip: 193.0.6.140
   src_mac: 00:02:CF:AB:A2:4C
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 52
   frame_type: ETHERNET II
@@ -786,8 +885,10 @@ packets:
     FE 41 96 5B 00 00
   len_frame_medium: 64
   len_frame_pcap: 54
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
-- dst_mac: 00:02:CF:AB:A2:4C
+- dst_ip: 193.0.6.140
+  dst_mac: 00:02:CF:AB:A2:4C
   ether_type: IPv4
   frame_number: 53
   frame_type: ETHERNET II
@@ -798,5 +899,6 @@ packets:
     00 00 94 99 00 00
   len_frame_medium: 64
   len_frame_pcap: 54
+  src_ip: 192.168.1.33
   src_mac: 00:14:38:06:E0:93
 pcap_name: ./vzorky_pcap_na_analyzu/eth-4.pcap
